Changed some UI colors

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto p-3">
                     <li class="nav-item mx-1 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded active" id="rapidd" href="#rapid">Rapid</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded " id="rapidd" href="#rapid">Rapid</a>
                     </li>
                     <li class="nav-item mx-1 mx-lg-1">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded " id="blitzz" href="#blitz">Blitz</a>
