some UI elements added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
         <div class="container navitem" id="landing">
             <div class="container mr-sm-2">
-                <h3><span><a href="#" class="text-decoration-none">Chess.com</a></span> Leaderboard</h3>
+                <h3><span><a href="#" id="landingg" class="text-decoration-none">Chess.com</a></span> Leaderboard</h3>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
