some Ui changes done

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     </nav>
 
     <div class="topHead" id="rapid">
+        <!-- <h5>***Click on the cards to know more about the respected Players***</h5> -->
         <p>Top #50 Players in Rapid Category</p>
     </div>
     <div id="leaderboards" class="card-container card-start"></div>
