responsive toggler icon set in navbar

--- a/index.html
+++ b/index.html
@@ -5,35 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chess Leaderboards</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
 
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
-
     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
         <div class="container navitem" id="landing">
             <div class="container mr-sm-2">
                 <h3><span><a href="#" id="landingg" class="text-decoration-none">Chess.com</a></span> Leaderboard</h3>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"
+                    aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
             </div>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav ms-auto p-3">
-                    <li class="nav-item mx-1 mx-lg-1">
+                    <li class="nav-item mx-1 mx-lg-1 d-flex">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded " id="rapidd" href="#rapid">Rapid</a>
                     </li>
-                    <li class="nav-item mx-1 mx-lg-1">
+                    <li class="nav-item mx-1 mx-lg-1 d-flex">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded " id="blitzz" href="#blitz">Blitz</a>
                     </li>
-                    <li class="nav-item mx-1 mx-lg-1">
+                    <li class="nav-item mx-1 mx-lg-1 d-flex">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded " id="bullett" href="#bullet">Bullet</a>
                     </li>
                     <li class="nav-item mx-1 mx-lg-1 d-flex">
@@ -65,7 +64,21 @@
     </div>
     <div id="leaderboards4" class="card-container card-start"></div>
 
+    
     <script src="script.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('.navbar-nav>li>a').on('click', function () {
+                $('.navbar-collapse').collapse('hide');
+            });
+        });
+    </script>
+
 </body>
 
 </html>
