--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
         <!-- <h5>***Click on the cards to know more about the respected Players***</h5> -->
         <p>Top #50 Players in Rapid Category</p>
     </div>
-    <div id="leaderboards" class="card-container card-start"></div>
+    <div id="leaderboards" class="card-container container card-start"></div>
 
     <div class="topHead" id="blitz">
         <p>Top #50 Players in Blitz Category</p>
     </div>
-    <div id="leaderboards2" class="card-container card-start"></div>
+    <div id="leaderboards2" class="card-container container card-start"></div>
 
     <div class="topHead" id="bullet">
         <p>Top #50 Players in Bullet Category</p>
     </div>
-    <div id="leaderboards3" class="card-container card-start"></div>
+    <div id="leaderboards3" class="card-container container card-start"></div>
 
     <div class="topHead" id="daily">
         <p>Top #50 Players in Daily Category</p>
     </div>
-    <div id="leaderboards4" class="card-container card-start"></div>
+    <div id="leaderboards4" class="card-container container card-start"></div>
 
     
     <script src="script.js"></script>
