--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="topHead" id="rapid">
         <!-- <h5>***Click on the cards to know more about the respected Players***</h5> -->
-        <p>Top #50 Players in Rapid Category</p>
+        <p class="fs-1">Top #50 Players in Rapid Category</p>
     </div>
     <div id="leaderboards" class="card-container container card-start"></div>
 
